adicionado link externo para blog farorito

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h3> Roberth De Souza Dos Santos </h3>
-    <img src="~/Downloads/foto.jpg" alt="selfie de roberth souza">
+    <img src="foto.jpg" alt="selfie de roberth souza" width="100"> 
     <p>
-        <strong> Brasileiro,</strong> de santana-AP, 29 anos.
+        <strong> Brasileiro,</strong> de santana-AP, 29 anos, <em> Pessoa estudante na trybe. </em>
     </p>
     <ul>
         <li> Organização </li>
@@ -17,6 +17,9 @@
         <li> Ética </li>
         <li> Flexibilidade </li>
     </ul>
-    
+    <h4>
+        link de blog favorito: 
+    </h4>
+    <a href="https://www.codigofonte.com.br/" target="_blank" rel="noopener noreferrer"> Código Fonte. </a>
 </body>
 </html>
