adicionado link interno para foto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h3> Roberth De Souza Dos Santos </h3>
-    <img src="foto.jpg" alt="selfie de roberth souza" width="100"> 
+    <img src="foto.jpg" alt="selfie de roberth souza" width="100" id="Foto"> 
     <p>
         <strong> Brasileiro,</strong> de santana-AP, 29 anos, <em> Pessoa estudante na trybe. </em>
     </p>
@@ -21,5 +21,8 @@
         link de blog favorito: 
     </h4>
     <a href="https://www.codigofonte.com.br/" target="_blank" rel="noopener noreferrer"> Código Fonte. </a>
+    <ul>
+        <li><a href="#Foto"> Vá até a foto </a></li>
+    </ul>
 </body>
 </html>
