adicionado índice de atalhos pela página

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
         link de blog favorito: 
     </h4>
     <a href="https://www.codigofonte.com.br/" target="_blank" rel="noopener noreferrer"> Código Fonte. </a>
+    <h5> índice de atalhos: </h5>
     <ul>
+        <li><a href="#Nome"> Nome </a></li>
         <li><a href="#Foto"> Vá até a foto </a></li>
+        <li><a href="#Descrição"> Descrição </a></li>
+        <li><a href="#Habilidades"> skills </a></li>
+        
     </ul>
+    
 </body>
 </html>
