--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h3> Roberth De Souza Dos Santos </h3>
     <img src="foto.jpg" alt="selfie de roberth souza" width="100" id="Foto"> 
     <p>
-        <strong> Brasileiro,</strong> de santana-AP, 29 anos, <em> Pessoa estudante na trybe. </em>
+        <strong> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em> Pessoa estudante na trybe. </em>
     </p>
     <ul>
         <li> Organização </li>
@@ -27,7 +27,7 @@
         <li><a href="#Foto"> Vá até a foto </a></li>
         <li><a href="#Descrição"> Descrição </a></li>
         <li><a href="#Habilidades"> skills </a></li>
-        
+
     </ul>
     
 </body>
