adicionando links externos para o Índice de atalhos na página.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title> meu portifolio web </title>
 </head>
 <body> 
-    <h3> Roberth De Souza Dos Santos </h3> 
-    <img src="foto.jpg" alt="selfie de roberth souza" width="100" id="Foto"> 
-    <p>
+    <h3 id="Nome"> Roberth De Souza Dos Santos </h3> 
+    <img src="foto.jpg" alt="selfie de roberth souza" width="300" id="Foto"> 
+    <p id="Descrição">
         <strong> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em> Pessoa estudante na trybe. </em>
     </p>
-    <ul>
-        <li> Organização </li>
-        <li> Autogestão </li>
-        <li> Autoconfiança </li>
-        <li> Ética </li>
-        <li> Flexibilidade </li>
+    <ul id="Habilidades">
+        <li> Organização </li> <br>
+        <li> Autogestão </li> <br>
+        <li> Autoconfiança </li> <br>
+        <li> Ética </li> <br>
+        <li> Flexibilidade </li> <br>
     </ul>
     <h4>
         link de blog favorito: 
@@ -23,10 +23,10 @@
     <a href="https://www.codigofonte.com.br/" target="_blank" rel="noopener noreferrer"> Código Fonte.</a>
     <h5> índice de atalhos: </h5>
     <ul>
-        <li><a href="#Nome"> Nome </a></li>
-        <li><a href="#Foto"> Vá até a foto </a></li>
-        <li><a href="#Descrição"> Descrição </a></li>
-        <li><a href="#Habilidades"> skills </a></li>
+        <li><a href="#Nome"> Nome </a></li> <br>
+        <li><a href="#Foto"> Vá até a foto </a></li> <br>
+        <li><a href="#Descrição"> Descrição </a></li> <br>
+        <li><a href="#Habilidades"> Habilidades </a></li> <br>
 
     </ul>
     
