adicionado fontes Diferentes para Nome e Descriçãogit

--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title> meu portifolio web </title>
+    <style>
+        h3 {
+            font-family: Verdana, Geneva, Tahoma,Arial, Helvetica, sans-serif ,sans-serif; /* Fonte para Nome */
+        }
+        p {
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif         /* Fonte para Descrição */
+        } 
+        
+    </style>
 </head>
 <body> 
-    <h3 id="Nome"> Roberth De Souza Dos Santos </h3> 
-    <img src="foto.jpg" alt="selfie de roberth souza" width="300" id="Foto"> 
-    <p id="Descrição">
+    <h3 id="Nome"> Roberth De Souza Dos Santos </h3>                         <!-- Nome --> 
+    <img src="foto.jpg" alt="selfie de roberth souza" width="300" id="Foto"> <!-- Foto-->
+    <p id="Descrição">                                                       <!-- Descrição -->
         <strong> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em> Pessoa estudante na trybe. </em>
     </p>
-    <ul id="Habilidades">
+    <ul id="Habilidades">                                                    <!-- Lsta de Habilidades -->
         <li> Organização </li> <br>
         <li> Autogestão </li> <br>
         <li> Autoconfiança </li> <br>
@@ -18,10 +27,10 @@
         <li> Flexibilidade </li> <br>
     </ul>
     <h4>
-        link de blog favorito: 
+        link de blog favorito:                                               <!-- Link Blog -->
     </h4>
     <a href="https://www.codigofonte.com.br/" target="_blank" rel="noopener noreferrer"> Código Fonte.</a>
-    <h5> índice de atalhos: </h5>
+    <h5> índice de atalhos: </h5>                                            <!-- Indíce -->
     <ul>
         <li><a href="#Nome"> Nome </a></li> <br>
         <li><a href="#Foto"> Vá até a foto </a></li> <br>
