adicionado cor base background do portifóliio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         p {
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif         /* Fonte para Descrição */
         } 
+        body {
+            background-color:aqua;                                                  /* cor base de background */
+        }
         
     </style>
 </head>
