adicionado classes para cada tamanho dos itens de Habilidades

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
         body {
             background-color:aqua;                                                  /* cor base de background */
         }
-        
+        .tamanho1 {                                                                   /* classes para cada tamanho itens Habilidades*/
+            font-size: 20px; 
+        }
+        .tamanho2 {
+            font-size: 35px; 
+        }
+        .tamanho3 {
+            font-size: 25px;
+        }
+        .tamanho4 {
+            font-size: 15px;
+        }
+        .tamanho5 {
+            font-size: 30;
+        }
     </style>
 </head>
 <body> 
@@ -23,11 +37,11 @@
         <strong> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em> Pessoa estudante na trybe. </em>
     </p>
     <ul id="Habilidades">                                                    <!-- Lsta de Habilidades -->
-        <li> Organização </li> <br>
-        <li> Autogestão </li> <br>
-        <li> Autoconfiança </li> <br>
-        <li> Ética </li> <br>
-        <li> Flexibilidade </li> <br>
+        <li class="tamanho1"> Organização </li> <br>
+        <li class="tamanho2"> Autogestão </li> <br>
+        <li class="tamanho3"> Autoconfiança </li> <br>
+        <li class="tamanho4"> Ética </li> <br>
+        <li class="tamanho5"> Flexibilidade </li> <br>
     </ul>
     <h4>
         link de blog favorito:                                               <!-- Link Blog -->
