estilo das tags alterados em destaques na Descrição

--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
         .tamanho5 {
             font-size: 30;
         }
+        #sublinhado {
+            text-decoration: underline; 
+        }
+        #corFundoDestaque {
+            background-color:red;
+        }
     </style>
 </head>
 <body> 
     <h3 id="Nome"> Roberth De Souza Dos Santos </h3>                         <!-- Nome --> 
     <img src="foto.jpg" alt="selfie de roberth souza" width="300" id="Foto"> <!-- Foto-->
     <p id="Descrição">                                                       <!-- Descrição -->
-        <strong> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em> Pessoa estudante na trybe. </em>
+        <strong id="sublinhado"> Brasileiro,</strong> de santana-AP, 29 anos, formado em redes de computadores, <em id="corFundoDestaque"> Pessoa estudante na trybe. </em>
     </p>
     <ul id="Habilidades">                                                    <!-- Lsta de Habilidades -->
         <li class="tamanho1"> Organização </li> <br>
